--- a/source/modules/_GLOBAL/footer/footer.html
+++ b/source/modules/_GLOBAL/footer/footer.html
@@ -1,9 +1,5 @@
 <footer class="footer">
   <div class="container">
-    {{> social social-parent-mod="" social-mod=""}}
+    {{> address address-parent-mod="" address-mod=""}}
   </div>
 </footer>
-
-<div class="overlay js-active"></div>
-
-<div class="popap"></div>
