--- a/source/modules/_GLOBAL/header/header.html
+++ b/source/modules/_GLOBAL/header/header.html
@@ -1,9 +1,7 @@
 <header class="header {{header-parent-mod}} {{header-mod}}">
   <div class="header__top">
     <div class="container">
-
-      {{> social social-parent-mod="header__social" social-mod=""}}
-
+      {{> address address-parent-mod="" address-mod=""}}
     </div>
   </div>
 </header>
