--- a/source/modules/_GLOBAL/sprite/sprite.stack.html
+++ b/source/modules/_GLOBAL/sprite/sprite.stack.html
@@ -105,6 +105,7 @@ They might well be outsourced to an external stylesheet of course.
 -->
 
 <style>
+ .svg-email-dims { width: 800px; height: 800px; }
  .svg-link-dims { width: 20px; height: 20px; }
  .svg-soc-tg-dims { width: 512px; height: 512px; }
  .svg-soc-wa-dims { width: 512px; height: 512px; }
@@ -155,6 +156,12 @@ selector is used to show the very shape that is referenced by the fragment ident
 
             <ul>
 
+             <li title="email">
+                    <div class="icon-box">
+                        <img src="../../../img/sprite.svg#email" class="svg-email-dims" alt="email">
+                    </div>
+                    <h2>email, </h2>
+                </li>
              <li title="link">
                     <div class="icon-box">
                         <img src="../../../img/sprite.svg#link" class="svg-link-dims" alt="link">
