--- a/source/modules/_ELEMENTS/address/address.html
+++ b/source/modules/_ELEMENTS/address/address.html
@@ -8,7 +8,7 @@
 
   {{> social social-parent-mod="address__social" social-mod=""}}
 
-  <a class="address__link address__link--email" href="kop.cepxuo@ya.ru">
+  <a class="address__link address__link--email" href="mailto:kop.cepxuo@ya.ru">
     <svg width="25" height="25">
       <use xlink:href="img/sprite.svg#email"></use>
     </svg>
